--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,7 +1,4 @@
----
----
-
-{ @import "{{ site.theme }}";
+ @import "{{ site.theme }}";
 
 p {
   line-height: 2;
@@ -11,5 +8,4 @@ code {
   margin: 0;
   padding-left: 0;
   padding-right: 0;
-}
 }
