--- a/hcat_app/styles/globals.css
+++ b/hcat_app/styles/globals.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@import "tailwind/base";
-@import "tailwind/components";
-@import "tailwind/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
