Can now import from data.json file to pages

--- a/hcat_app/styles/globals.css
+++ b/hcat_app/styles/globals.css
@@ -18,8 +18,8 @@ Header {
     background-color: lightgrey;
 }
 
-.policies {
-    color: blue;
+.policy {
     font-size: larger;
     text-decoration: none;
+    color: navy;
 }
