dynamic routing update

--- a/hcat_app/styles/globals.css
+++ b/hcat_app/styles/globals.css
@@ -6,25 +6,42 @@ Header {
     background-color: rgb(147, 0, 0);
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  /* Style for the entire list group */
+  .list-group {
+    width: 400px;
+    margin: 20px auto;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Style for the list group items */
+  .list-group-item {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  /* Hover effect for list group items */
+  .list-group-item:hover {
+    background-color: #f8f9fa;
+  }
 
 .location {
     font-size: larger;
     text-decoration: none;
-    color: navy;
-}
-
-.location:hover {
-    font-size: 150%;
-    color: rgb(177, 0, 0);
+    color: black;
 }
 
 .policy {
     font-size: larger;
     text-decoration: none;
-    color: navy;
-}
-
-.policy:hover {
-    font-size: 150%;
-    color: rgb(177, 0, 0);
+    color: black;
 }
