Dynamic Url and listgroups now on pages

--- a/hcat_app/styles/globals.css
+++ b/hcat_app/styles/globals.css
@@ -45,3 +45,9 @@ ul {
     text-decoration: none;
     color: black;
 }
+
+.planTypes {
+  font-size: larger;
+  text-decoration: none;
+  color: black;
+}
