Aded classnames for policies and made text white

--- a/hcat_app/styles/globals.css
+++ b/hcat_app/styles/globals.css
@@ -73,6 +73,14 @@ li {
   color: #ffffff;
 }
 
+.policy-name {
+  color: #ffffff;
+}
+
+.policy-description {
+  color: #ffffff;
+}
+
 /* Container Styles */
 .container {
   display: flex;
