refactored styles for <p> and removed repetition

--- a/hcat_app/styles/globals.css
+++ b/hcat_app/styles/globals.css
@@ -28,6 +28,10 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
+p {
+  color: #ffffff;
+}
+
 li {
   list-style-type: none;
 }
@@ -49,35 +53,11 @@ li {
   text-decoration: underline;
 }
 
-.list-group-heading {
-  color: #ffffff;
-}
-
 .location-name {
   color: #ffffff;
 }
 
-.location-sport {
-  color: #ffffff;
-}
-
-.location-address {
-  color: #ffffff;
-}
-
 .plan-name {
-  color: #ffffff;
-}
-
-.plan-description {
-  color: #ffffff;
-}
-
-.policy-name {
-  color: #ffffff;
-}
-
-.policy-description {
   color: #ffffff;
 }
 
